sredjivanje stranice Home i njenih komponenti

--- a/glaceshop/src/components/NavBar.css
+++ b/glaceshop/src/components/NavBar.css
@@ -1,7 +1,7 @@
 /* src/components/NavBar.css */
 
 .navbar {
-  background: #c0f1b1;          
+  background: #af609be7;          
   padding: 1rem 1.5rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   position: sticky;
@@ -26,7 +26,7 @@
 
 .nav-link:hover,
 .nav-link:active {
-  color: #ffe066;               /* žuta za hover efekat */
+  color: #ffe066;               
   background: rgba(255, 255, 255, 0.15);
   border-radius: 6px;
 }
